fixes final part of issue #287 - the category header could be displayed in one column but the first item in the category could be in the next column - items themselves are not broken between columns - the problem is fixed by making the category header a part of the first item, which requires a modification of the HTML and correspondingly tweaking the CSS a bit. - listf-styling.scss should have been deleted when it was renamed to `_listf-styling.scss` patch will be visible soon on new-raku. Difference between old and new is that class listf-caption is now on a `<p>` not a `<div>`

--- a/Website/plugins/listfiles/_listf-styling.scss
+++ b/Website/plugins/listfiles/_listf-styling.scss
@@ -21,7 +21,6 @@
     }
     .listf-file {
         display: inline-block;
-        padding-top: 0.25rem;
         border-top: 1px solid $border;
         border-bottom: 1px solid $border;
         break-inside: avoid;
@@ -29,6 +28,7 @@
             display: inline-block;
             width: 100%;
             text-align: center;
+            padding-top: 0.25rem;
         }
         p {
             font-size: $size-6;
@@ -37,7 +37,6 @@
             padding-left: 0.5rem;
             padding-right: 0.5rem;
             margin-bottom: 0.25rem;
-            align-self: normal;
         }
     }
 }
